--- a/main.html
+++ b/main.html
@@ -8,9 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="holder">
+		<div class="item-1">item1</div>
+		<div class="item-2">item2</div>
+		<div class="item-3">item3</div>
+	</div>
 </body>
 
 </html>
